kleine Anpassung im BASE64 Encoder